# CPU-simulator

./: .gitignore  CMakeLists.txt  README.md  architecture.excalidraw  main.cpp  opcodes.txt
headers/: ALU.h  CU.h  Opcodes.h  RAM.h
src/: ALU.cpp  CU.cpp  RAM.cpp  main.cpp
unit_tests/: ALU_tests.cpp  CMakeLists.txt  CU_tests.cpp  RAM_tests.cpp
